source/scss/main.scss
@import "./../../bower_components/normalize-scss/_normalize.scss";
@import "./../../bower_components/news-vj-css-defaults/css/main";
@import "./../../bower_components/sharetools/bin/templates/dropdown/share.scss"; // Developer: choose your sharetools of choice ('dropdown', 'buttons'). This should match the ShareToolsTemplate value in config.json


$version: "0.1.0";

@import "hero";

html body div.full-frame-scaffold-news-banner {
    z-index:999;
}

.bbc-news-vj-wrapper {

    input[type="submit"],
    input[type="button"],
    button {
        @extend %button--standard;

        color: #444;
        border: 0;

        &:active, &:pressed {
            border: 0;
        }

        &:focus {
            background-color: #999;
        }

        &:hover {
            background-color: #999;
        }

        &:disabled {
            @extend %button--inactive;
            border: 0;
            width: 100%;
        }

        &.button--prev {
            @extend %button--cta-reverse;
        }

        &.button--next {
            @extend %button--cta;
        }

        &.button--reset {
            @extend %button--reset;
        }

        &.button--see-results {
            background-color: #2E8840;
            color: white;
            margin: 0 auto;
            max-width: 300px;
            width: 100%;
        }
        &.button--reset-quiz {
            background-color: #2E8840;
            color: white;
        }
    }

    select {
        @extend %form--select;
    }

    input[type="checkbox"] {
        @extend %form--checkbox;
    }

    input[type="radio"] {
        @extend %form--radio;
    }




    .hidden {
        display: none;
        visibility: hidden;
    }

    .section--questions {
        position:relative;
        z-index:20;
    }

    .quiz--body {
        text-align: center;
    }

    .question {
        margin-bottom: 40px;
        margin-top: 40px;
    }

    .question__icon {
        text-align: center;
        margin: 0 auto;
        padding-bottom: 12px;
    }

    .question__number {}

    .question__text {
        font-size:1.4em;
        line-height: 1.4em;
        font-weight: 800;
        margin-top:0;
    }

    .questions .answers .answer--chosen {
        background-color: #2E8840;
        border: 0;
        color: white;
    }

    .answers {
        margin: 0 auto;
        max-width: 300px;
    }

    .button--answer {
        background-color: #bbb;
        color: #000;
        width:100%;
    }

    .question__feedback {
        color: white;
        margin-top: 30px;
        margin-bottom: 94px;
        position: relative;
    }

    .chevron {
        position: relative;
        text-align: center;
        padding: 6%;
        padding-top: 9%;
        top:30px;
        z-index:0;
    }

    .chevron:before {
        content: '';
        position: absolute;
        top: 0;
        left: 0;
        height: 100%;
        width: 50%;
        background-color: #266AB1;
        transform: skew(0deg, 6deg);
        z-index:-10;
    }

    .chevron:after {
        content: '';
        position: absolute;
        top: 0;
        right: 0;
        height: 100%;
        width: 50%;
        background-color: #266AB1;
        transform: skew(0deg, -6deg);
        z-index:-10;
    }​

    {} //fixes linter

    .chevron__text {
        font-size: 1.25em;
        line-height: 1.25em;
        max-width: 600px;
        margin: 0 auto;
        text-align: center;
    }

    .section--results {
        text-align:center;
    }

    .results {
        margin-top:24px;
    }
 }

